--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 .modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.85);justify-content:center;align-items:center;z-index:300;padding:20px}
 .modal-content{background:#111;border-radius:20px;padding:30px;max-width:400px;width:100%;position:relative;text-align:center}
 .modal-content img{max-width:150px;margin-bottom:20px;border-radius:12px}
-.modal-content .close{position:absolute;top:15px;right:15px;cursor:pointer;font-size:20px;color:#fff}
+.modal-content .close{position:absolute;top:15px;right:15px;cursor:pointer;font-size:28px;color:#fff;width:35px;height:35px;display:flex;align-items:center;justify-content:center;border-radius:50%;background:rgba(255,255,255,.1);transition:all 0.3s;border:1px solid rgba(255,255,255,.2)}
+.modal-content .close:hover{background:rgba(255,50,50,.8);border-color:#ff5555;transform:rotate(90deg)}
 .modal-content a{display:inline-block;margin-top:15px;padding:10px 24px;border-radius:20px;background:linear-gradient(135deg,#5ddcff,#9a5cff);color:#000;text-decoration:none;font-weight:600;transition:0.3s}
 .modal-content a:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(93,220,255,.4)}
 .status-active{color:#0f0;font-weight:600}
@@ -196,13 +197,13 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 
   <div class="projects-grid" id="mods" style="display:none">
     <div class="project-card">
-      <h3>No Rain Particles</h3>
+      <h3>NoRainParticles</h3>
       <p data-i18n="nrp">Lethal Company performance mod removing rain particle effects.</p>
       <a class="project-link" href="https://github.com/mystic-HQ/NoRainParticles">GitHub</a>
     </div>
 
     <div class="project-card">
-      <h3>Better Cruiser Sync</h3>
+      <h3>BetterCruiserSync</h3>
       <p data-i18n="bcs">Lethal Company mod that syncs the cruiser between players.</p>
       <a class="project-link" href="https://github.com/mystic-HQ/BetterCruiserSync">GitHub</a>
     </div>
