--- a/index.html
+++ b/index.html
@@ -290,10 +290,29 @@ function showProjects(type,btn){
 
 /* ===== MODAL DATA ===== */
 const projectData = {
-  abyss:{img:"abyss.png",status:"active",pos:"Veteran QA Tester",link:"https://discord.gg/deepspirit"},
-  solvo:{img:"solvo.png",status:"active",pos:"QA Tester",link:"https://discord.gg/ryfqDSYGMX"},
-  qac:{img:"qac.png",status:"active",pos:"QA Tester",link:"https://discord.gg/qac"}
+  abyss:{
+    img:"abyss.png",
+    status:"active",
+    pos:"Veteran QA Tester",
+    time:"August 2025 - Now",
+    link:"https://discord.gg/deepspirit"
+  },
+  solvo:{
+    img:"solvo.png",
+    status:"active",
+    pos:"QA Tester",
+    time:"November 2025 - Now",
+    link:"https://discord.gg/ryfqDSYGMX"
+  },
+  qac:{
+    img:"qac.png",
+    status:"active",
+    pos:"QA Tester",
+    time:"September 2025 - Now",
+    link:"https://discord.gg/qac"
+  }
 };
+
 
 function openModal(project){
   const data = projectData[project];
